# chessGui

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Game.h  GameInterface.cpp  GameInterface.h  Main.qml  Move.cpp  Move.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Utility.h  main.cpp
Stockfish/: CMakeLists.txt
scripts/: chess_env.py  chess_nn.py  train.py
src/: Board.cpp  Board.h  Console.cpp  Console.h  Game.cpp  Game.h  GameInterface.cpp  GameInterface.h  Move.cpp  Piece.cpp  Piece.h  Position.h  StockfishWrapper.h  Utility.h  main.cpp
ui/: Board.qml  UserProfile.qml
